# chiselstore

./: .gitignore  BENCHMARKING.md  Cargo.toml  LICENSE  README.md  build.rs
core/: Cargo.toml
core/examples/: README.md  gouge.rs  gouged.rs
core/proto/: proto.proto
core/src/: database.rs  lib.rs  rpc.rs  server.rs
examples/: gouge.rs  gouged.rs  proto.proto
proto/: proto.proto
sqlite/: Cargo.toml  sqlite-gen.h  test.c
sqlite/include/: sqlite.h
sqlite/src/: lib.rs
src/: errors.rs  lib.rs  logger.rs  replica.rs  rpc.rs  server.rs
tests/: common.rs  integration_tests.rs
