[package]
name = "chiselstore"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.63", features = ["backtrace"] }
async-mutex = "1.4.0"
async-notify = "0.2.0"
async-trait = "0.1.52"
bytes = "1.1.0"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.1"
derivative = "2.2.0"
little_raft = { git = "https://github.com/chiselstrike/little-raft.git", rev = "58e00c105c25b4aae54a10147ee06449b10fbd88" }
log = "0.4.17"
pretty_env_logger = "0.4.0"
prost = "0.8.0"
sqlite = "0.26.0"
thiserror = "1.0.30"
tokio = { version = "1.11.0", features = ["full"] }
tonic = "0.5.2"

[build-dependencies]
tonic-build = "0.5.2"

[dev-dependencies]
structopt = "0.3.25"
